# meeting-transcriber

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: minutes_generator.py  ollama_utils.py  rag.py  transcriber.py  watcher.py  webui.py
tests/: test_minutes_generator.py  test_rag.py  test_transcriber.py  test_watcher.py  test_webui.py
